add forward port in devContainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,10 +13,10 @@
 	// "features": {},
 	"features": {
 		"ghcr.io/devcontainers/features/docker-outside-of-docker:1": {}
-	}/*  */
+	},/*  */
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
+	"forwardPorts": [8000]
 
 	// Uncomment the next line to run commands after the container is created.
 	// "postCreateCommand": "cat /etc/os-release",
